--- a/main.css
+++ b/main.css
@@ -1,14 +1,20 @@
 *, body {
+  color: #FFF;
+  font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
 }
 
 body {
-  background: purple;
+  background: hsl(270, 100%, 50%);
+}
+
+.main-heading {
+  /* color: #FFF; */
 }
 
 .nav {
-  color: #FFF;
+  /* color: #FFF; */
   display: inline-flex;
   justify-content: space-around;
   width: 100%;
