--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 *, body {
-  color: #FFF;
+  /* color: #FFF; */
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
@@ -8,25 +8,38 @@
 /*general elements*/
 
 body {
-  background: hsl(270, 100%, 50%);
+  /* background: hsl(270, 100%, 50%); */
 }
 
 /*classes*/
 
 .contact-section {
+  color: black;
   display: inline-flex;
 }
 
 .home-prompt {
+  background: linear-gradient(
+    170deg,
+    hsl(271, 68%, 32%),
+    hsl(271, 68%, 32%) 15%, 
+    hsl(270, 100%, 50%) 15%,
+    hsl(270, 100%, 50%) 55%,
+    hsl(248, 80%, 67%) 55%,
+    hsl(248, 80%, 67%) 70%, 
+    hsl(0, 0%, 100%) 70%,
+    hsl(0, 0%, 100%) 100%
+    );
+  color: #FFF;
+  min-height: 700px;
   /*will add gradient to this section*/
 }
 
 .main-heading {
-  /* color: #FFF; */
+  
 }
 
 .nav {
-  /* color: #FFF; */
   display: inline-flex;
   justify-content: space-around;
   width: 100%;
