--- a/main.css
+++ b/main.css
@@ -11,6 +11,11 @@ body {
   /* background: hsl(270, 100%, 50%); */
 }
 
+h1 {
+  letter-spacing: .4;
+  font-size: 42px;
+}
+
 /*classes*/
 
 .contact-section {
@@ -36,7 +41,13 @@ body {
 }
 
 .main-heading {
-  
+  margin: auto;
+  padding: 100px;
+  width: 33%;
+}
+
+.main-prompt {
+  padding: 20px;
 }
 
 .nav {
