--- a/main.css
+++ b/main.css
@@ -106,7 +106,11 @@ h1 {
 }
 
 .service {
-  width: 400px;
+  border: 1px solid grey;
+  border-radius: 10px;
+  display: flex;
+  padding: 30px 30px 30px 0;
+  width: 500px;
 }
 
 .services {
