--- a/main.css
+++ b/main.css
@@ -73,7 +73,7 @@ h1 {
     hsl(0, 0%, 100%) 100%
     );
   color: #FFF;
-  min-height: 700px;
+  min-height: 800px;
   /*will add gradient to this section*/
 }
 
@@ -89,12 +89,16 @@ h1 {
 
 .nav {
   display: inline-flex;
+  font-size: 12px;
   justify-content: space-between;
-  width: 100%;
+  padding: 30px;
+  width: 95%;
 }
 
 .nav-btns {
   display: inline-flex;
+  justify-content: space-around;
+  width: 400px;
 }
 
 .prompt-down {
@@ -109,6 +113,7 @@ h1 {
   border: 1px solid grey;
   border-radius: 10px;
   display: flex;
+  margin: 10px 15px;
   padding: 30px 30px 30px 0;
   width: 500px;
 }
@@ -119,8 +124,12 @@ h1 {
   height: 400px;
   margin: auto;
   padding: 100px;
-  justify-content: space-around;
+  /* justify-content: space-around; */
   width: 80%;
+}
+
+.title {
+  margin-left: 100px;
 }
 
 /*ids*/
@@ -141,5 +150,15 @@ h1 {
   border-radius: 10px;
   color: #FFF;
   height: 50px;
+  width: 100px;
+}
+
+#support-btn {
+  background-color: hsl(113, 47%, 62%);
+  border: none;
+  border-radius: 3px;
+  color: #FFF;
+  margin-top: -5px;
+  padding: 7px;
   width: 100px;
 }
