--- a/main.css
+++ b/main.css
@@ -7,13 +7,13 @@
 
 /*general elements*/
 
-body {
-  /* background: hsl(270, 100%, 50%); */
-}
-
 h1 {
   letter-spacing: .4;
   font-size: 42px;
+}
+
+span {
+  color: hsl(113, 47%, 62%);
 }
 
 /*classes*/
@@ -55,6 +55,7 @@ h1 {
 .domain-input {
   border: none;
   border-radius: 10px;
+  font-size: 16px;
   height: 50px;
   padding-left: 25px;
   width: 300px;
@@ -97,8 +98,14 @@ h1 {
 
 .nav-btns {
   display: inline-flex;
+  font-size: 14px;
   justify-content: space-around;
-  width: 400px;
+  list-style: none;
+  width: 600px;
+}
+
+.prompt-desc {
+  padding-bottom: 20px;
 }
 
 .prompt-down {
@@ -129,6 +136,7 @@ h1 {
 }
 
 .title {
+  font-weight: lighter;
   margin-left: 100px;
 }
 
@@ -149,7 +157,9 @@ h1 {
   border: none;
   border-radius: 10px;
   color: #FFF;
+  font-size: 14px;
   height: 50px;
+  letter-spacing: .5px;
   width: 100px;
 }
 
