--- a/main.css
+++ b/main.css
@@ -15,6 +15,16 @@ body {
     );
 }
 
+button:hover {
+  cursor: pointer;
+  opacity: .9;
+}
+
+li:hover {
+  color: #FFF;
+  cursor: pointer;
+}
+
 /*general elements*/
 
 h1 {
@@ -45,8 +55,8 @@ span {
   color: #FFF;
   display: inline-flex;
   height: 200px;
-  padding: 100px;
-  width: 100%;
+  padding: 100px 0 100px 150px;
+  width: 90%;
 }
 
 .create-act-btn {
@@ -95,7 +105,7 @@ span {
   border-radius: 10px;
   font-size: 16px;
   height: 50px;
-  padding-left: 25px;
+  padding-left: 35px;
   width: 300px;
 }
 
@@ -127,13 +137,15 @@ span {
 
 .main-heading {
   margin: auto;
-  padding: 100px;
+  padding: 80px;
   width: 33%;
 }
 
 .main-prompt {
-  padding: 20px;
+  margin: auto;
+  padding: 30px 0;
   text-align: center;
+  width: 79%;
 }
 
 .more-info {
@@ -143,7 +155,7 @@ span {
 
 .nav {
   display: inline-flex;
-  font-size: 12px;
+  font-size: 13px;
   justify-content: space-between;
   padding: 30px;
   width: 95%;
@@ -170,8 +182,14 @@ span {
   display: flex;
   flex-direction: column;
   margin: auto;
+  text-align: center;
   padding: 50px;
-  width: 33%;
+  width: 37%;
+}
+
+.search {
+  display: flex;
+  width: 100%;
 }
 
 .service {
@@ -181,7 +199,7 @@ span {
   display: flex;
   margin: 10px 15px;
   padding: 30px 30px 30px 0;
-  width: 500px;
+  width: 40%;
 }
 
 .services {
@@ -189,7 +207,29 @@ span {
   flex-wrap: wrap;
   height: 400px;
   margin: auto;
-  width: 100%;
+  width: 110%;
+}
+
+.service-cont {
+  margin-top: 20px;
+}
+
+.subheader {
+  font-size: 32px;
+  font-weight: lighter;
+  width: 200px;
+  margin: auto;
+  padding-top: 10px;
+  margin-bottom: 50px;
+}
+
+.subheader:after {
+  content: '';
+  display: block;
+  margin: 0 auto;
+  padding-top: 10px;
+  width: 50%;
+  border-bottom: 1px solid black;
 }
 
 .title {
@@ -201,6 +241,7 @@ span {
 
 #contact-btn {
   border-radius: 7px;
+  box-shadow: 0 8px 15px -8px hsl(0, 0%, 50%);
   font-size: 16px;
   margin: 5px;
   width: 150px;
@@ -226,6 +267,7 @@ span {
   font-size: 14px;
   height: 50px;
   letter-spacing: .5px;
+  margin-left: 5px;
   width: 100px;
 }
 
@@ -233,8 +275,153 @@ span {
   background-color: hsl(113, 47%, 62%);
   border: none;
   border-radius: 3px;
+  box-shadow: 0 2px 5px hsl(0, 0%, 24%);
   color: #FFF;
+  font-weight: bolder;
+  height: 30px;
   margin-top: -5px;
   padding: 7px;
   width: 100px;
 }
+
+
+/*tablet view*/
+@media only screen and (min-width: 800px) and (max-width: 1200px) {
+  .main-heading {
+    width: 50%;
+  }
+
+  .search {
+    margin: auto;
+    width: 66%;
+  }
+}
+
+/*mobile view*/
+
+@media only screen and (max-width: 800px) {
+  body, html {
+    background-color: orange;
+    width: 100%;
+  }
+
+  .contact-info {
+    width: 100%;
+  }
+
+  .contact-section {
+    flex-direction: column;
+    font-size: 22px;
+    height: 100%;
+    padding: 0;
+    text-align: center;
+    width: 100%;
+  }
+
+  .create-prompt {
+    padding: 100px 15px 100px 15px;
+    width: initial;
+  }
+
+  .description {
+    height: 100%;
+  }
+
+  .description-text {
+    padding: 0;
+    padding-bottom: 15px;
+  }
+
+  .domain-input {
+    margin-bottom: 20px;
+  }
+
+  .home-prompt {
+    width: 100%;
+  }
+
+  .list-title {
+    font-size: 32px;
+  }
+
+  .main-heading {
+    padding: 0;
+    width: 100%;
+  }
+
+  .more-info {
+    width: initial;
+  }
+
+  .nav {
+    display: flex;
+    flex-direction: column;
+    width: 80%
+  }
+
+  .nav-btns {
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 20px;
+    height: 100px;
+    justify-content: space-between;
+    margin-top: 25px;
+    width: 100%;
+  }
+
+  .prompt-desc {
+    width: 100%;
+  }
+  
+  .prompt-down {
+    color: grey;
+    padding: 80px 0px;
+    width: 67%;
+  }
+
+  .search {
+    flex-direction: column;
+    margin: auto;
+    text-align: center;
+    width: 81%;
+  }
+
+  .service {
+    width: 99%;
+  }
+
+  .services {
+    height: 100%;
+    width: 100%;
+  }
+
+  .title {
+    display: block;
+    font-size: 42px;
+    margin-left: 0;
+  }
+
+  #contact-btn {
+    margin: 25px;
+  }
+
+  #search-btn {
+    font-size: 22px;
+    width: 95%;
+  }
+
+  #support-btn {
+    font-size: 16px;
+    width: 50%;
+  }
+ }
+
+ /*tv screen*/
+
+ @media only screen and (min-width: 1450px) {
+
+  .search {
+    margin: auto;
+    width: 66%;
+}
+ }
